# curso_fastapi_do_zero

./: hello.py  main.py  models.py  pyproject.toml  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 2100e69adef1_exercise_02_class_0.py  b42ecc80fe04_create_users_table.py
router/: auth.py
routers/: users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
