[project]
name = "curso-fastapi-do-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pydantic-settings>=2.8.1",
    "pyproject-toml>=0.1.0",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.39",
]
